--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ img {margin-bottom: -7px}
   <div class="w3-bar w3-white w3-wide w3-padding w3-card">
     <a href="index.html"><img class="w3-left" src="images/homepage/FWTLogoTiny.jpg"></a>
     <a href="attractions.html" class="w3-bar-item w3-button">Attractions</a>
-    <a href="C:/Users/Trade/AppData/Local/GitHubDesktop/app-1.2.0/FWTCostaRica/photos.html" class="w3-bar-item w3-button">Photos</a>
+    <a href="photos.html" class="w3-bar-item w3-button">Photos</a>
     <a href="contact.html" class="w3-bar-item w3-button">Contact</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
