--- a/photos.html
+++ b/photos.html
@@ -91,7 +91,7 @@ img {margin-bottom: -7px}
 
 
 
-<<div class="w3-container w3-padding-32" id="contact"></br>
+<div class="w3-container w3-padding-32" id="contact"></br>
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
   <p>So, where do you want to go? Contact me to reserve a tour!</p>
   <p>E-mail option coming soon. For now, please call +506 7142 3961.<p>
